--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -20,9 +20,10 @@
 {% endblock %}
 
 {% block content %}
+<!--white background overlay div-->
 <div class="overlay"></div>
-
-<div class="container mb-2">
+<!--Top header of Checkout Success page-->
+<div class="container mb-2 text-center">
     <div class="row">
         <div class="col">
             <hr>
@@ -30,7 +31,7 @@
             <hr>
         </div>
     </div>
-
+<!--Order summary for client to check before purchase-->
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
@@ -127,9 +128,10 @@
                             <i class="fas fa-lock"></i>
                         </span>
                     </button>
+                    <!--Warning that card will be charged-->
                     <p class="small text-danger my-0">
                         <span class="icon">
-                            <i class="fas fa-exclamation-circle"></i>
+                            <i class="fas fa-exclamation-triangle"></i>
                         </span>
                         <span>Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
                     </p>
@@ -139,7 +141,7 @@
     </div>
 </div>
 {% endblock %}
-
+<!--Stripe Key and Client secret path and route to Stripe Js-->
 {% block postloadjs %}
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
