--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
+<!--landing page-->
+<div class="container h-100 text-center">
     <div class="row h-100"> 
         <div class="col-12 col-md-6 my-auto">
             <div class="my-5">
