--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
         <div class="col-12 col-md-6 my-auto">
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates,online_membership,public_membership,corporate_membership,membership_student" class="gym-now-button btn-lg rounded-0 text-uppercase py-3">Get Lean Now </a>
+                    <a href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates,online_membership,public_membership,corporate_membership,membership_student" class="gym-now-button btn-lg rounded-0 text-uppercase py-3">Get Lean Now <i class="fas fa-dumbbell"></i></a>
                 </h4>
             </div>
         </div> 
