--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -14,8 +14,9 @@
 {% endblock %}
 
 {% block content %}
+<!--White background to cover background image in body-->
 <div class="overlay"></div>
-
+<!--Container-->
 <div class="container mb-2">
     <div class="row">
         <div class="col-12 col-md-6">
@@ -36,7 +37,8 @@
                 {% else %}
                     {{ field }}
                 {% endif %}
-                <div class="text-right">
+                {% endfor %}
+                <div class="text-left">
                     <a class="btn cancel-button rounded-0" href="{% url 'products' %}">Cancel <i class="fas fa-window-close"></i></a>
                     <button class="btn add-class rounded-0" type="submit">Add Product <i class="far fa-plus-square"></i></button>
                 </div>
