--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -1,17 +1,24 @@
+<!--Fixing image field on update product field copied from Django Github and then adapted-->
+
 {% if widget.is_initial %}
-    <p>{{ widget.initial_text }}:</p>
-    <a href="{{ widget.value.url }}">
-        <img width="100%" height="96" class="rounded shadow-sm" src="{{ widget.value.url }}">
-    </a>
-    {% if not widget.required %}
-        <div class="custom-control custom-checkbox mt-3">
-            <input class="custom-control-input" type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
-            <label class="custom-control-label text-danger" for="{{ widget.checkbox_id }}">{{ widget.clear_checkbox_label }}</label>
-        </div>
-    {% endif %}<br>
-    {{ widget.input_text }}
+<p>{{ widget.initial_text }}:</p>
+<a href="{{ widget.value.url }}">
+    <!--Used 100% to render image-->
+    <img width="100%" height="96" class="rounded shadow-sm" src="{{ widget.value.url }}">
+</a>
+{% if not widget.required %}
+<div class="custom-control custom-checkbox mt-3">
+    <input class="custom-control-input" type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
+    <label class="custom-control-label text-danger" for="{{ widget.checkbox_id }}">{{ widget.clear_checkbox_label
+        }}</label>
+</div>
+{% endif %}<br>
+{{ widget.input_text }}
 {% endif %}
 <span class="btn buy-now-button rounded-0 btn-file">
-    Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
+    Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}" {%
+        include "django/forms/widgets/attrs.html" %}><i class="fas fa-images"></i>
 </span>
-<strong><p class="text-danger" id="filename"></p></strong>
+<strong>
+    <p class="text-danger" id="filename"></p>
+</strong>
