--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -10,7 +10,9 @@
 {% endblock %}
 
 {% block content %}
+<!--white background overlay-->
 <div class="overlay"></div>
+<!--Product detail Card-->
 <div class="container-fluid">
     <div class="card mb-3">
         <div class="row">
@@ -77,13 +79,14 @@
                                             </div>
                                             {% endif %}
                                         </div>
+                                        <!--Action buttons on product detail page-->
                                         <div class="col-12">
                                             <input type="submit"
-                                                class="buy-now-button btn-lg rounded-0 text-uppercase mt-5"
-                                                value="Add to Bag">
+                                                class="buy-now-button btn-lg rounded-0 text-uppercase mt-3"
+                                                value="Add to Cart">
                                             <hr>
                                             <a href="{% url 'products' %}"
-                                                class="btn-secondary btn-sm rounded-0 mt-5 text-uppercase">
+                                                class="btn-secondary btn-sm rounded-0 mt-3 text-uppercase">
                                                 <i class="fas fa-chevron-left fa-sm btn-secondary"></i>
                                                 Keep Shopping
                                             </a>
@@ -104,6 +107,7 @@
 
 {% endblock %}
 
+<!--post load js file for subtotal calculation-->
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
