--- a/templates/base.html
+++ b/templates/base.html
@@ -157,7 +157,7 @@
     <footer class="footer mt-auto py-3">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 mt-2">
+                <div class="col-sm-4 mt-2 text-center">
                     <!--Opening Hours information-->
                     <h5>Opening Hours</h5>
                     <ul>
@@ -173,7 +173,7 @@
                     </ul>
                 </div>
                 <!--Contact us-->
-                <div class="col-sm-4 mt-2">
+                <div class="col-sm-4 mt-2 text-center">
                     <h5>Contact Us</h5>
                     <ul>
                         <li>
@@ -188,7 +188,7 @@
                     </ul>
                 </div>
                 <!--Social Media with external links to the developers own social media-->
-                <div class="col-sm-4 mt-2">
+                <div class="col-sm-4 mt-2 text-center">
                     <h5>Social Media</h5>
                     <a class="social-media" href="https://www.instagram.com/andrew_burns_moves/" target="_blank"><i
                             class="fab fa-instagram-square"></i></a>
