--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,6 +48,11 @@ body {
 }
 
 /*--homepage header--*/
+
+.active{
+    background-color: #80ffa9;
+}
+
 .top-banner{
     background-color: #80C4FF;
     color:#1a1a1a;   
