--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -32,10 +32,9 @@
     <div class="row">
         <div class="col">
             {% if bag_items %}
-            <div class="table-responsive rounded">
                 <div class="table-responsive-sm rounded">
                     <table class="table table-sm table-borderless">
-                        <thead class="text-black">
+                        <thead class="text-lean">
                             <tr>
                                 <th scope="col">Product Info</th>
                                 <th scope="col"></th>
@@ -154,7 +153,6 @@
             {% endif %}
         </div>
     </div>
-</div>
 
 
 {% endblock %}
